# faiss

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  TURBOQUANT_UPSTREAM_COMPARISON.md  build.sh  pyproject.toml
.github/actions/build_conda/: action.yml
.github/workflows/: build-metal-macos.yml  build-pull-request.yml  build-wheel-osx-arm64.yml
benchs/: bench_turboquant.py
c_api/: CMakeLists.txt  Clustering_c.cpp
cmake/: metal_combine_sources.cmake  metal_embed_metallib.cmake
conda/faiss/: build-lib-osx-arm64.sh  build-pkg-osx-arm64.sh  meta.yaml
faiss/: CMakeLists.txt  IndexTurboQuant.cpp  IndexTurboQuant.h  clone_index.cpp  factory_tools.cpp  index_factory.cpp
faiss/impl/: ScalarQuantizer.cpp  ScalarQuantizer.h  TurboQuantizer.cpp  TurboQuantizer.h  index_read.cpp  index_write.cpp
faiss/impl/scalar_quantizer/: codecs.h  quantizers.h  sq-avx2.cpp  sq-avx512.cpp  sq-dispatch.h  sq-neon.cpp  training.cpp
faiss/metal/: CMakeLists.txt  MetalCloner.cpp  MetalCloner.h  MetalClonerOptions.h  MetalIndex.cpp  MetalIndex.h  MetalIndexFlat.cpp  MetalIndexFlat.h  MetalIndexScalarQuantizer.cpp  MetalIndexScalarQuantizer.h  MetalIndexTurboQuant.cpp  MetalIndexTurboQuant.h  MetalResources.cpp  MetalResources.h  README.md  StandardMetalResources.h  StandardMetalResources.mm
faiss/metal/impl/: FlatSearchKernels.metal  MetalFlatIndex.cpp  MetalFlatIndex.h  MetalKernelsData.h  MetalResourcesImpl.h  MetalResourcesImpl.mm  MetalScalarQuantizer.h  MetalScalarQuantizer.mm  MetalTurboQuantizer.h  MetalTurboQuantizer.mm  TurboQuantKernels.metal
faiss/metal/test/: CMakeLists.txt  TestMetalCloner.cpp  TestMetalIndexFlat.mm  TestMetalScalarQuantizer.cpp  test_metal_flat.py  test_metal_refs.py  test_metal_turbo_quant.py
faiss/python/: CMakeLists.txt  __init__.py  __init__.pyi  loader.py  pyproject.toml  setup.py  swigfaiss.swig
faiss/utils/: utils.cpp
faiss/utils/simd_impl/: distances_autovec-inl.h
scripts/ci/: build-metal-wheel-osx-arm64.sh  install-metal-deps-osx-arm64.sh  repair-metal-wheel-osx-arm64.sh  run-metal-wheel-osx-arm64.sh  test-metal-wheel-osx-arm64.sh
tests/: CMakeLists.txt  common_faiss_tests.py  test_build_blocks.py  test_factory.py  test_factory_tools.cpp  test_index_binary.py  test_local_search_quantizer.py  test_meta_index.py  test_read_index_deserialize.cpp  test_scalar_quantizer.cpp  test_scalar_quantizer_correctness.py  test_standalone_codec.py  test_turboquant.cpp  torch_test_contrib.py  torch_test_neural_net.py
